fix overlapping feed components issue with a divider

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#addForm {
+  margin: 500px;
+  padding: 500px;
+}
